Fixing layout bugs. Removing old feeds no longer active.

--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -1,169 +1,4 @@
-// Variables
-$white: #fff
-$black: #000
-$grey: #ccc
-$primary: #ff8000
-$secondary: #0000ff
-$primary-transparent: rgba(0, 0, 0, .2)
-
-$mobile: 980px
-
-// Mixins
-@mixin block
-  margin-bottom: 30px
-  background-color: $grey
-
-
-body
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif
-  font-size: 16px
-
-header
-  padding: 30px 0
-  background-color: $white
-
-  @media (min-width: $mobile)
-    position: fixed
-    width: 30%
-    height: 100%
-
-  h1
-    margin-bottom: 30px
-    padding: 0 30px
-    font-size: 24px
-    font-weight: bold
-    text-align: center
-    color: $primary
-
-  h2
-    margin-bottom: 30px
-    padding: 0 30px
-    font-size: 20px
-    line-height: 150%
-    text-align: center
-    color: $black
-
-  .status
-    display: flex
-    flex-direction: row
-    // align-items: center
-    margin: 0 20px
-
-    @media (min-width: $mobile)
-      flex-direction: column
-      // align-items: initial
-
-    .filter
-      flex: 1 0 0
-      padding: 10px
-      margin-bottom: 30px
-      border-top: 1px solid $grey
-      border-right: 1px solid $grey
-      border-bottom: 1px solid $grey
-      text-align: center
-      cursor: pointer
-      background-color: $primary
-      color: $white
-      line-height: 120%
-
-      &:hover
-        background-color: $white
-        color: $primary
-
-      &:first-child
-        border-left: 1px solid $grey
-        // line-height: 32px
-
-      @media (min-width: $mobile)
-         border: 1px solid $grey
-
-// Feed List
-.wrapper
-  background-color: $grey
-
-  @media (min-width: $mobile)
-    float: right
-    width: 70%
-
-.streams
-  display: flex
-  flex-wrap: wrap
-  flex-direction: column
-  padding: 20px 30px
-
-  @media (min-width: $mobile)
-    flex-direction: row
-
-  .stream-block
-    @include block
-    flex: 1 0 0
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px $primary-transparent
-    background-color: $white
-
-    @media (min-width: $mobile)
-      flex: 1 0 40%
-      margin: 10px
-
-    .stream-block-top
-      background-position: center center
-      background-repeat: no-repeat
-      height: 102px
-
-      .logo
-        width: 80px
-        height: auto
-        margin: 10px
-        float: left
-        border-radius: 50%
-        border: 1px solid $primary
-
-      .link
-        float: right
-        margin: 26px 10px
-        padding: 15px
-        color: $white
-        text-decoration: none
-        background-color: $primary
-        border: 1px solid $white
-
-        &:hover
-          background-color: $secondary
-
-    .stream-block-bottom
-      padding: 10px
-
-      h3
-        display: inline-block
-        margin-top: 10px
-        font-size: 1.5em
-        line-height: 150%
-
-      p
-        color: $primary
-        font-size: 1.2em
-        line-height: 150%
-
-        span
-          color: $black
-
-      .stream
-        // display: none
-
-  .hide
-    display: none
-
-#lean_overlay
-  // position: fixed
-  z-index: 100
-  top: 0px
-  left: 50%
-  height: 50%
-  width: 50%
-  background: #000
-  color: #fff
-  display: none
-
-footer
-  clear: both
-  // height: 40px
-  // background-color: $primary
+@import 'common'
+@import 'header'
+@import 'feeds'
+@import 'footer'
